bpo-30654: Do not reset SIGINT handler to SIG_DFL in finisignal (GH-7146) (cherry picked from commit e905c84494526363086f66a979e317e155bf9536)

Co-authored-by: pkerling <pkerling@casix.org>